fix(title/icon): wrong margin

--- a/nui/SimpleNotification/notification.css
+++ b/nui/SimpleNotification/notification.css
@@ -457,5 +457,5 @@
 }
 
 .gn-title-icon {
-    margin: 0 0.5rem;
+    margin-right: 0.5rem;
 }
